2008-01-21  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.h: use SMTaskRef properly (fixes kill all core dump).
	* SFtp.cc: don't use FSETSTAT to truncate the file on upload when
	  not needed (pos==0 can use open mode with truncation).
	* Fish.cc: unset translation when charset is set to an empty string.

2008-01-17  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc: fixed hex printing of the handle.

2008-01-03  Alexander V. Lukyanov <lav@yars.free.net>

	* buffer.cc: use copy of va_list properly (fixes a coredump on some systems).
	* url.cc: (encode) use xstring::get_tmp to allow several encode calls at once.
	* HttpDir.cc: init link_target properly (fixes NULL pointer fault).

2007-12-28  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc, FileGlob.cc, HttpDir.cc, LocalAccess.cc, ftpclass.cc:
	  fixed constness for strchr, strrchr and strstr
	  (reported by Yann Rouillard <yann@pleiades.fr.eu.org>).
	* GetJob.cc, GetJob.h: don't decode URL escapes when no URL schema used.

2007-12-12  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: workaround the case when transfer ends without data connection.

2007-12-12  Martin Nagy <mnagy@redhat.com>

	* FileCopy.cc: (GetPercentDoneStr) prevent buffer overflow.

2007-11-13  Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.cc, xstring.h: make most xstring methods return *this;
	  new function get_tmp(s,n).
	* misc.cc: use new get_tmp.
	* xmalloc.h: add ().

2007-11-12  Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.cc, xstring.h: (get_tmp(const char*)) new function.
	* misc.cc: use it.
	* FileAccess.cc, FileAccess.h: optimize Log* methods.
	* MirrorJob.cc: count rm errors properly.

2007-11-08  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: don't reset timeout_timer all the time.
	* resource.cc: make ftp:use-stat-for-list off by default.

2007-11-03  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc: (Log2) don't use %.*s (it mishandles invalid mb characters).