@@ -4,6 +4,8 @@
 	* SFtp.cc: don't use FSETSTAT to truncate the file on upload when
 	  not needed (pos==0 can use open mode with truncation).
 	* Fish.cc: unset translation when charset is set to an empty string.
+	* SFtp.cc, SFtp.h, resource.cc: (sftp:use-full-path) new setting;
+	  use sftp:charset properly; unset translation when charset eq "".
 
 2008-01-17  Alexander V. Lukyanov <lav@yars.free.net>
 
